--- a/index.html
+++ b/index.html
@@ -3,92 +3,95 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../main.css" />
+    <title>Blog element</title>
+    <script
+      src="https://kit.fontawesome.com/d5d417f71c.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./assets/CSS/reset.css" />
+    <link rel="stylesheet" href="./assets/CSS/main.css" />
   </head>
-  <body>
-    <div>
-      <img src="./fiat-500-4322521_640.jpg" alt="" />
-      <span
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni itaque
-        ipsa hic cumque, illo suscipit vero odit, eum minus alias unde obcaecati
-        dolor officia distinctio commodi ipsam dolores. Alias, blanditiis cumque
-        dignissimos, laborum adipisci voluptates eius nostrum facilis beatae
-        porro numquam, nihil repellendus cum nesciunt perferendis? Molestiae
-        numquam quidem architecto maiores nemo repellendus dolor eligendi velit
-        dolorem aperiam, omnis animi saepe distinctio et mollitia veritatis
-        corrupti ad quasi quibusdam voluptatibus, atque fugit maxime blanditiis.
-        Reprehenderit dolore vitae neque, ratione quas officiis labore ad alias
-        odit consectetur inventore adipisci praesentium minus quidem!
-        Perspiciatis illum quae ipsam dolores omnis rem soluta natus nulla quo
-        deleniti consequatur facilis praesentium dolor quos, iste voluptates
-        quasi obcaecati exercitationem, saepe asperiores inventore. Ipsum
-        similique eaque nihil totam temporibus repudiandae nobis velit nam
-        tempora accusantium veritatis porro illo, neque eos animi corporis
-        officiis sed tenetur itaque cumque soluta iusto? Aliquid mollitia sed
-        dolorem? Accusamus asperiores similique ea quisquam esse ex assumenda
-        veritatis tempore quam quae repudiandae dolore dolor, nobis inventore
-        soluta nisi mollitia fugiat! Eaque, dicta asperiores! Laboriosam, dolore
-        error. Aliquid qui at cum possimus deserunt ea consectetur aut
-        consequatur quaerat? Facilis nulla saepe neque voluptas repellat quis.
-        Ullam ratione laborum quos odit possimus sunt atque cum impedit, qui,
-        vitae ex explicabo magnam. Nam similique, itaque vitae, incidunt minima,
-        distinctio id totam dignissimos animi et aut pariatur repellat
-        obcaecati. Harum animi saepe dolores placeat expedita nulla unde
-        mollitia, facere, vel dolore et exercitationem commodi quas, provident
-        illum molestias doloremque quia laboriosam ab. Vel neque optio, nobis
-        tenetur, alias maiores in voluptatem inventore distinctio, sit corporis
-        fuga! Officia expedita quasi quibusdam adipisci aperiam! Magnam veniam
-        iste aspernatur cumque voluptatum fuga, perspiciatis odio consectetur
-        assumenda nam eaque vitae accusantium doloremque ad tenetur, iure
-        aliquid. Obcaecati ad, a sit excepturi at commodi asperiores totam
-        voluptatem architecto veniam fugiat debitis odio molestias. Adipisci
-        dolorum perspiciatis, porro error delectus consequuntur voluptatum
-        ducimus nemo. Consequuntur error enim aspernatur? Voluptatum fugiat ab
-        reprehenderit, aperiam minima quod nemo cumque corporis illum, facere
-        dolore repudiandae id recusandae delectus praesentium accusamus est
-        amet! Dolores laboriosam, expedita suscipit quisquam possimus tempora
-        odio labore et doloremque cum hic ullam sed blanditiis? Magnam culpa
-        tempora aliquam repellendus inventore incidunt quidem iusto illo porro
-        facilis rem earum reprehenderit deserunt hic amet, sint nam ratione!
-        Enim deleniti harum at facere tempore mollitia aliquam cumque, ipsa
-        culpa vero maiores, veritatis blanditiis cupiditate autem nam. At sequi,
-        voluptate corporis distinctio perferendis aperiam dolor eos recusandae
-        ut voluptatem mollitia, est eius vel. Est quaerat odit incidunt sint
-        quae minima autem officiis aliquid, laudantium perspiciatis at omnis
-        natus reprehenderit. Reprehenderit nulla impedit repellendus laudantium
-        sint necessitatibus a quas animi, harum eum nobis! Ducimus obcaecati
-        sint, modi dolor itaque ratione? Nostrum minima et commodi, a possimus
-        deserunt quo! Tenetur libero dolorum fugiat deserunt exercitationem
-        nulla nihil ipsa inventore voluptatem magni, nam quam. Voluptatibus,
-        reprehenderit accusantium mollitia omnis laudantium nostrum laboriosam
-        saepe odio, est, repellendus facilis quod impedit facere natus laborum
-        quos totam perferendis inventore dolores recusandae quidem similique
-        tenetur labore. Dolorum reprehenderit tempora temporibus minus
-        consectetur animi earum voluptatum. Voluptas et eos ut est sequi dolorum
-        autem minima laudantium a odit, tempore rem accusamus vero distinctio
-        laboriosam animi, suscipit veniam. Omnis recusandae consectetur iste quo
-        tempora nemo amet, exercitationem debitis labore in laboriosam sapiente,
-        neque hic alias accusantium. Aut sit omnis quae quis deserunt! Iusto eum
-        accusantium cupiditate, odio officia tempora, expedita architecto nulla
-        quos dolorem quis eos delectus mollitia amet neque quasi itaque?
-        Mollitia nisi doloremque, officia obcaecati necessitatibus dolores modi
-        cumque porro. Optio sed asperiores animi sit rerum expedita fugit. Iure
-        voluptatum debitis rerum eligendi accusantium dicta veniam, assumenda
-        inventore quas autem unde sunt tempora blanditiis placeat maxime aliquam
-        perferendis eos? Ex quos, aut doloremque praesentium placeat ut magnam
-        odit rerum laboriosam ad eius perferendis provident unde voluptatum!
-        Voluptatibus doloremque, culpa nulla non, aliquam, minus necessitatibus
-        repellendus voluptate error repudiandae quia magni. Sequi praesentium
-        nobis est voluptatem. Ab et praesentium, beatae expedita qui distinctio
-        ex aperiam accusantium exercitationem eligendi, vel ratione dolores
-        provident dolorum animi quia nobis alias magnam explicabo aliquam
-        cupiditate e</span
-      >
-    </div>
 
-    <script src="./code.jquery.com_jquery-3.7.0.min.js"></script>
-    <script src="../Main.js"></script>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">BAND</a></li>
+          <li><a href="#">TOUR</a></li>
+          <li><a href="#">CONTACT</a></li>
+          <li>
+            <a href="#"
+              >MORE
+              <i class="fa-solid fa-download fa-shake fa-2xs"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <button class="search">
+        <i
+          class="fa-solid fa-magnifying-glass fa-beat"
+          style="color: #f1f3f6"
+        ></i>
+      </button>
+    </header>
+    <section class="section1">
+      <div>
+        <h2>Lorem, ipsum.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </section>
+    <section class="section2">
+      <article class="article1">
+        <h2>THE BAND</h2>
+        <span class="span1">We love music</span>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ab
+          accusamus blanditiis aspernatur animi cumque unde molestiae incidunt
+          dignissimos odio, autem voluptates, nulla sint odit optio impedit. At,
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
+          ab Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
+          eius! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Architecto Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Exercitationem inventore amet voluptatum magni vero minus, beatae
+          nesciunt ad. Doloremque ab nam dolorum cumque voluptatem ex.
+          Exercitationem voluptatibus, eaque ducimus architecto repudiandae
+          magni corporis dignissimos hic, ex officiis similique ipsa ratione.
+          lorem30 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam
+          ipsa eos libero in. Sunt, sequi perspiciatis sapiente, eum ratione,
+          asperiores ex aspernatur nihil exercitationem porro iste magni nisi
+          laboriosam suscipit.
+        </p>
+      </article>
+      <article class="article2">
+        <article id="id1">
+          <p>Name</p>
+          <img class="img1" src="./assets/images/bandmember.jpg" alt="" />
+        </article>
+        <article id="id1">
+          <p>Name</p>
+          <img class="img1" src="./assets/images/bandmember.jpg" alt="" />
+        </article>
+        <article id="id1">
+          <p>Name</p>
+          <img class="img1" src="./assets/images/bandmember.jpg" alt="" />
+        </article>
+      </article>
+    </article>
+    <article class="article3">
+      <article id="id2">
+        <p>Name</p>
+        <img class="img1" src="./assets/images/bandmember.jpg" alt="" />
+      </article>
+      <article id="id3">
+        <p>Name</p>
+        <img class="img4" src="./assets/images/bandmember.jpg" alt="" />
+      </article>
+      <article id="id1">
+        <p>Name</p>
+        <img class="img5" src="./assets/images/bandmember.jpg" alt="" />
+      </article>
+    </article>
+    </section>
   </body>
 </html>
