--- a/index.html
+++ b/index.html
@@ -52,15 +52,9 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
           ab Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde,
           eius! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Architecto Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Exercitationem inventore amet voluptatum magni vero minus, beatae
-          nesciunt ad. Doloremque ab nam dolorum cumque voluptatem ex.
-          Exercitationem voluptatibus, eaque ducimus architecto repudiandae
-          magni corporis dignissimos hic, ex officiis similique ipsa ratione.
-          lorem30 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam
-          ipsa eos libero in. Sunt, sequi perspiciatis sapiente, eum ratione,
-          asperiores ex aspernatur nihil exercitationem porro iste magni nisi
-          laboriosam suscipit.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Hic facilis quibusdam iste quidem facere laborum dolorem!
+           Dignissimos distinctio fugit veritatis!
         </p>
       </article>
       <article class="article2">
@@ -78,20 +72,59 @@
         </article>
       </article>
     </article>
-    <article class="article3">
+    </section>
+    <section class="section3">
       <article id="id2">
-        <p>Name</p>
-        <img class="img1" src="./assets/images/bandmember.jpg" alt="" />
+        <h2>TOUR DATES</h2>
+        <span class="span1">Remember to book your tickets!</span>
+        <ul>
+        <li>September <span class="Sold">Sold out</span></li>
+        <li>October <span class="Sold">Sold out</span></li>
+        <li>November <span class="span3">3</span></li>
+        </ul>
       </article>
-      <article id="id3">
-        <p>Name</p>
-        <img class="img4" src="./assets/images/bandmember.jpg" alt="" />
+      <article class="article3">
+        <article class="article4">
+          <img src="./assets/images/newyork.jpg" alt="Silinib">
+          <h4>New York</h4>
+          <span>Fri 27 Nov 2016</span>
+          <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+          <button>Buy Tickets</button>
+        </article>
+        <article class="article4">
+          <img src="./assets/images/paris.jpg" alt="">
+          <h4>Paris</h4>
+          <span>Sat 28 Nov 2016</span>
+          <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+          <button>Buy Tickets</button>
+        </article>
+        <article class="article4">
+          <img src="./assets/images/sanfran.jpg" alt="">
+          <h4>San Francisco</h4>
+          <span>Sun 29 Nov 2016</span>
+          <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+          <button>Buy Tickets</button>
+        </article>
       </article>
-      <article id="id1">
-        <p>Name</p>
-        <img class="img5" src="./assets/images/bandmember.jpg" alt="" />
+    </section>
+    <section class="section4">
+      <p>CONTACT</p>
+      <span class="span4">Fan? Drop a note!</span>
+      <article class="article5">
+        <ul>
+          <li><i class="fa-sharp fa-solid fa-location-dot fa-2xs"></i><span class="span5">Chicago, US</span></li>
+        <li><i class="fa-solid fa-phone fa-2xs"></i><span class="span5">Phone: +00 151515</span></li>
+        <li><i class="fa-solid fa-envelope fa-2xs"></i><span class="span5">Phone: +00 151515</span></li>
+      </ul>
       </article>
-    </article>
+      <article class="article6" autocomplete="on">
+        <form action="#">
+        <input class="text" type="text" placeholder="Name">
+        <input class="text" type="email" placeholder="Email"><br/>
+        <input class="text1" type="text" placeholder="Meassage">
+        </form>
+      </article>
+      
     </section>
   </body>
 </html>
